# unique-file-generator-rust

./: .gitignore  Cargo.toml  README.md  TEST2_FHXDkEJS75fd3wLzfI7D.txt  TEST2_f3v4hCQcJn0Bhn3PY7yx.txt  TEST2_lKTTGKRch4TGtWh45TGX.txt  TEST2_nDLu4BNE96HngxM1DpV4.txt  TEST2_nEw1x2FOrG4jF829OOUi.txt  TEST_7fri4klo2zTIoMI5QJVQ.txt  TEST_FcDJdzeInBNxHmYQHlGN.txt  TEST_fENdIDTan7qdJWdsSoyw.txt  TEST_gwdZoSCLxhxtAbW4QRgk.txt  TEST_zygkvfzgAJyd9ChU6r1J.txt
src/: arg_parsing.rs  generate_files.rs  main.rs  random_strings.rs
