[package]
name = "unique-file-generator-rust"
version = "0.7.0"
edition = "2021"
authors = ["CodeConscious"]
description = "Generate an arbitrary number of files that are named randomly and contain random content."
homepage = "https://github.com/codeconscious/unique-file-generator-rust/"
repository = "https://github.com/codeconscious/unique-file-generator-rust/"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
num-format = "0.4.4"
colored = "2"
rand = "0.8.5"
indicatif = "0.17.3"
